# multi-targeted-uap

./: .gitignore  README.md  Untitled-1.ipynb  demo.py  docker-compose.yml  evaluation.py  label_imagenet_test.py  pyproject.toml  qwen_test.ipynb  readme.md  requirements.txt  test.py
attacks/: __init__.py  base.py  split.py  union_split.py
config/: config.py
dataset/: __init__.py  base.py  cropa.py  dataset.py  imagenet.py  muap.py  vqa.py
models/: __init__.py  base.py  blip2.py  clip.py  llama3.py  llava.py  openvla.py  qwen.py
results_anaylsis/: explain_t_sne.ipynb  label_imagenet_test.py  vlm_metrics.ipynb
utils/: __init__.py  constraint.py  distance.py  logger.py  optimizer.py
